--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -10,6 +10,25 @@ apps:
     plugs: [unity7, home, hardware-observe]
  
 parts:
+    desktop-helper:
+        source: https://github.com/paroj/snapcraft-desktop-helpers.git
+        source-subdir: gtk
+        plugin: make
+        make-parameters: ["FLAVOR=gtk3"]
+        build-packages:
+          - libgtk-3-dev
+        stage-packages:
+          - libxkbcommon0  # XKB_CONFIG_ROOT
+          - ttf-ubuntu-font-family
+          - dmz-cursor-theme
+          - light-themes
+          - shared-mime-info
+          - libgtk-3-0
+          - libgdk-pixbuf2.0-0
+          - libglib2.0-bin
+          - libgtk-3-bin
+          - unity-gtk3-module
+          - locales-all
     sensors-unity:
         plugin: python3
         source: git://git.launchpad.net/sensors-unity
@@ -20,7 +39,7 @@ parts:
             - gir1.2-gtk-3.0
             - gir1.2-pango-1.0
             - libsensors4
-        after: [desktop-gtk3]
+        after: [desktop-helper]
         stage:
             - -usr/share/pkgconfig # also in desktop-gtk3
             - -usr/share/mime      # also in desktop-gtk3
