snapcraft: use theme plugs

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -10,6 +10,20 @@ apps:
     command: desktop-launch $SNAP/share/sensors-unity/sensors-gui.py
     plugs: [unity7, home, hardware-observe]
 
+plugs:
+  gtk-3-themes:
+    interface: content
+    target: $SNAP/data-dir/themes
+    default-provider: gtk-common-themes
+  icon-themes:
+    interface: content
+    target: $SNAP/data-dir/icons
+    default-provider: gtk-common-themes
+  sound-themes:
+    interface: content
+    target: $SNAP/data-dir/sounds
+    default-provider: gtk-common-themes
+
 slots:
   # for GtkApplication registration
   sensors-gui:
