--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,9 +1,10 @@
 name: sensors-unity
-version: 18.02
+version: "18.02"
 confinement: strict
 grade: stable
 summary: A simple sensors GUI for the Unity Desktop
 description:  Allows monitoring the output of the `sensors` command graphically.
+base: core18
 
 apps:
   sensors-unity:
@@ -32,8 +33,34 @@ slots:
     name: net.rojtberg.sensors-gui
 
 parts:
+    desktop-gtk3:
+      source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+      source-subdir: gtk
+      plugin: make
+      make-parameters: ["FLAVOR=gtk3"]
+      build-packages:
+        - build-essential
+        - libgtk-3-dev
+      stage-packages:
+        - libxkbcommon0  # XKB_CONFIG_ROOT
+        - ttf-ubuntu-font-family
+        - dmz-cursor-theme
+        - light-themes
+        - adwaita-icon-theme
+        - gnome-themes-standard
+        - shared-mime-info
+        - libgtk-3-0
+        - libgdk-pixbuf2.0-0
+        - libglib2.0-bin
+        - libgtk-3-bin
+        - unity-gtk3-module
+        - libappindicator3-1
+        - locales-all
+        - xdg-user-dirs
+        - ibus-gtk3
+        - libibus-1.0-5
     sensors-unity:
-        plugin: python3
+        plugin: python
         source: git://git.launchpad.net/sensors-unity
         stage-packages:
             - python3-distutils-extra
